--- a/Base64Decode.html
+++ b/Base64Decode.html
@@ -14,12 +14,12 @@
   <nav>
     <p>Check out other encoder/decoders here:</p>
     <ul>
-      <li><a href="./URLEncodeDecode.html" target="_blank">URL Encode Decode</a></li>
-      <li><a href="./Base64Encode.html" target="_blank">Base64 Encode</a></li>
-      <li><a href="./MD5HashGenerator.html" target="_blank">MD5 Hash Generator</a></li>
-      <li><a href="./SHA1HashGenerator.html" target="_blank">SHA-1 Hash Generator</a></li>
-      <li><a href="./SHA256HashGenerator.html" target="_blank">SHA-256 Hash Generator</a></li>
-      <li><a href="./SHA512HashGenerator.html" target="_blank">SHA-512 Hash Generator</a></li>
+      <li><a href="./URLEncodeDecode.html" >URL Encode Decode</a></li>
+      <li><a href="./Base64Encode.html" >Base64 Encode</a></li>
+      <li><a href="./MD5HashGenerator.html" >MD5 Hash Generator</a></li>
+      <li><a href="./SHA1HashGenerator.html" >SHA-1 Hash Generator</a></li>
+      <li><a href="./SHA256HashGenerator.html" >SHA-256 Hash Generator</a></li>
+      <li><a href="./SHA512HashGenerator.html" >SHA-512 Hash Generator</a></li>
     </ul>   
 
             
