--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -43,7 +43,7 @@
     <textarea type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
     <br>
     <div class="my-buttons">
-    <input type="button" id="encode-button" value= "Base64 Encode">
+    <input type="button" id="encode-button" value= "Encode">
     <input type="button" id="reset-button" value= "Reset">
     </div>
     <br>
