--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -43,8 +43,8 @@
    </div>
     <br>
     <div style="text-align: center;">
-    <input type="button" id="encode-button" value= "Encode url">
-    <input type="button" id="decode-button" value= "Decode url">
+    <input type="button" id="encode-button" value= "Encode">
+    <input type="button" id="decode-button" value= "Decode">
     <input type="button" id="reset-button" value= "Reset">
   </div>
   </main>
