--- a/Base64Decode.html
+++ b/Base64Decode.html
@@ -42,7 +42,7 @@
     </div>
     <br>
     <div style="text-align: center;">
-    <input type="button" id="decode-button" value= "Base64 Decode">
+    <input type="button" id="decode-button" value= "Decode">
     <input type="button" id="reset-button" value= "Reset">
     </div>
       
