--- a/Base64Decode.html
+++ b/Base64Decode.html
@@ -27,17 +27,27 @@
         <a href="./SHA512HashGenerator.html">SHA-512 Hash Generator</a>
       </div>
       </div>
-      <div class="dropdown-nav">Color Converter</div>
-      <div class="dropdown-nav">Time Converter</div> 
-      <div class="dropdown-nav">Number Base Converter</div>
-      <div class="dropdown-nav">String Utilities</div>
-      <div class="dropdown-nav">Unit Converter</div>       
+      <div class="other-websites">
+        <a href="https://my-color-converter.netlify.app/rgb-hex" target="_blank">Color Converter</a>
+      </div>
+      <div class="other-websites">
+        <a href="https://my-time-stamp-converter.netlify.app/epochtohuman" target="_blank">Time Converter</a>
+      </div> 
+      <div class="other-websites">
+        <a href="https://my-number-base-converter.netlify.app/decimaltobinary" target="_blank">Number Base Converter</a>
+      </div>
+      <div class="other-websites">
+        <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
+      </div>
+      <div class="other-websites">
+        <a href="#" >Unit Converters</a>
+      </div >        
   </header>
   <main>
     <div style="text-align: center;">
     <h2>Base64 Decode</h2>
     <h3>Decode a base64 string:</h3>
-    <textarea style="margin-right: 20px;"type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
+    <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
     <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>  
     </div>
     <br>
