--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -45,36 +45,46 @@
   </header>
   <main>
     <div style="text-align: center;">
-    <h2>Base64 Encode</h2>
+    <h2 >Base64 Encode</h2>
     <h3>Encode a base64 string:</h3>
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
     <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
     </div>
-    <br>
-    <div style="text-align: center;">
+
+    <div style="text-align: center;margin-top:20px;">
     <input type="button" id="encode-button" value= "Encode">
     <input type="button" id="reset-button" value= "Reset">
     </div>
-    <br>
   </main>
-
+   
   <section>
-    <!--<img class="portfolio-link-img" src="Images/undraw_my_app_re_gxtj.svg">
-    <p>
-      hi hello!
-    </p>-->
+    <div class="content-info" style="text-align: justify;">
+    <h3 style="padding-top: 10px;text-align: center;">What is Base64 encoding?</h3>
+    <p>When you have some binary data that you want to ship across a network, you generally don't do it by just streaming the bits and bytes over the wire in a raw format. 
+      Because some media are made for streaming text. You never know, some protocols may interpret your binary data as control characters (like a modem), or your binary data 
+      could be screwed up because the underlying protocol might think that you've entered a special character combination (like how FTP translates line endings).
+      So to get around this, people encode the binary data into characters.</p>
+     <p>Base64 is one of these types of encoding and decoding technique.
+     It is 64 because you can generally rely on the same 64 characters being present in many character sets, 
+     and you can be reasonably confident that your data's going to end up on the other side of the wire uncorrupted.</p>
+     <p>It's basically a way of encoding arbitrary binary data in ASCII text. It takes 4 characters per 3 bytes of data, plus potentially a bit of padding at the end.
+     Essentially each 6 bits of the input is encoded in a 64-character alphabet. The "standard" alphabet uses A-Z, a-z, 0-9 and + and /, with = as a padding character.
+     There are URL-safe variants.</p>
+     <p>You can check out more about it 
+       <a style="color:#388bfd;" href ="https://developer.mozilla.org/en-US/docs/Glossary/Base64" target="_blank">here.</a></p>
+      </div>     
     
-    
-  </section>
-
-  <hr>
-
-  <footer>
-    Contact me
-
-
-
+  <footer style="background-color:#24292e;">
+    <div class="footer-info" style="text-align: center;color:white;">
+      <p style="padding-top: 10px;">Check out my profiles here:</p>
+       <div class="footer-logo" >
+         <a href="https://www.linkedin.com/in/subham-mitra/" target="_blank"><img src="Images/linkedin.svg"></a>
+         <a style="margin-left: 10px;margin-right: 10px;" href="https://github.com/subham2107" target="_blank"><img src="Images/github.svg"></a>
+         <a href="https://twitter.com/subham2107" target="_blank"><img src="Images/twitter.svg"></a>
+        </div>
+    </div>
   </footer>
+</section>
 
 
 
