--- a/MD5HashGenerator.html
+++ b/MD5HashGenerator.html
@@ -50,20 +50,33 @@
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to generate a hash of."  rows="15" cols="60"></textarea>
     <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
     </div>
-    <br>
-    <div style="text-align: center;">
+    
+    <div style="text-align: center;margin-top:20px;">
     <input type="button" id="generate-button" value= "Generate">
     <input type="button" id="reset-button" value= "Reset">
    </div>
   </main>
-  <hr>
-
-  <footer>
-    Contact me
-
-
-
+  <section>
+    <div class="content-info" style="text-align: justify;">
+    <h3 style="padding-top: 10px;text-align: center;">What is an MD5 hash?</h3>
+    <p>The MD5 hash generator is useful for encoding passwords, credit cards numbers and other sensitive date into MySQL, Postgress or other databases. PHP programmers, ASP programmers and anyone developing on MySQL, SQL, Postgress or similar should find this online tool an especially handy resource.</p>
+     <p>An MD5 hash is created by taking a string of an any length and encoding it into a 128-bit fingerprint. Encoding the same string using the MD5 algorithm will always result in the same 128-bit hash output. MD5 hashes are commonly used with smaller strings when storing passwords, credit card numbers or other sensitive data in databases such as the popular MySQL. This tool provides a quick and easy way to encode an MD5 hash from a simple string of up to 256 characters in length.</p>
+     <p>MD5 hashes are also used to ensure the data integrity of files. Because the MD5 hash algorithm always produces the same output for the same given input, users can compare a hash of the source file with a newly created hash of the destination file to check that it is intact and unmodified.</p>
+     <p>You can check out more about it 
+       <a style="color:#388bfd;" href ="https://en.wikipedia.org/wiki/MD5" target="_blank">here.</a></p>
+      </div>     
+    
+  <footer style="background-color:#24292e;">
+    <div class="footer-info" style="text-align: center;color:white;">
+      <p style="padding-top: 10px;">Check out my profiles here:</p>
+       <div class="footer-logo" >
+         <a href="https://www.linkedin.com/in/subham-mitra/" target="_blank"><img src="Images/linkedin.svg"></a>
+         <a style="margin-left: 10px;margin-right: 10px;" href="https://github.com/subham2107" target="_blank"><img src="Images/github.svg"></a>
+         <a href="https://twitter.com/subham2107" target="_blank"><img src="Images/twitter.svg"></a>
+        </div>
+    </div>
   </footer>
+</section>
 
   
 </body>
