--- a/SHA1HashGenerator.html
+++ b/SHA1HashGenerator.html
@@ -50,21 +50,33 @@
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to generate a hash of."  rows="15" cols="60"></textarea>
     <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
     </div>
-    <br>
-    <div style="text-align: center;">
+    <div style="text-align: center;margin-top:20px;">
     <input type="button" id="generate-button" value= "Generate">
     <input type="button" id="reset-button" value= "Reset">
     </div>
   </main>
-  <hr>
+  <section>
+    <div class="content-info" style="text-align: justify;">
+    <h3 style="padding-top: 10px;text-align: center;">What is a SHA-1 Hash?</h3>
+    <p>SHA-1 (Secure Hash Algorithm) is a 160 bit cryptographic hash function created by the NSA in 1995. It creates a 40 byte hash value for the input of the algorithm. SHA-1 is one-way, meaning that the original input cannot be be determined simply by knowing the hash value. SHA-1 was designed to be collision resistant, meaning that two inputs could not have the same hash value.</p>
+     <p>In 2005, SHA-1 was found to no longer be secure enough for ongoing use in high security environments. It was widely used for signing of SSL certificates, but is being phased out and will no longer be supported by many browsers by 2017.</p>
+     <p>SHA-1 is often used as a checksum algorithm. Text or files are fed into the MD5 algorithm and the resulting hash would change if the file had been changed. This is done to detect malicious tampering, or file corruption.
 
-  <footer>
-    Contact me
-
-
-
+      SHA-1 has also historically been used as a password hashing algorithm. Password hashing algorithms allow a password to be stored, in a website's database for instance, without having to store the actual password. This makes it more difficult to steal passwords, and if the hash is taken, the user's password is not necessarily compromised.</p>
+     <p>You can check out more about it 
+       <a style="color:#388bfd;" href ="https://en.wikipedia.org/wiki/SHA-1" target="_blank">here.</a></p>
+      </div>     
+    
+  <footer style="background-color:#24292e;">
+    <div class="footer-info" style="text-align: center;color:white;">
+      <p style="padding-top: 10px;">Check out my profiles here:</p>
+       <div class="footer-logo" >
+         <a href="https://www.linkedin.com/in/subham-mitra/" target="_blank"><img src="Images/linkedin.svg"></a>
+         <a style="margin-left: 10px;margin-right: 10px;" href="https://github.com/subham2107" target="_blank"><img src="Images/github.svg"></a>
+         <a href="https://twitter.com/subham2107" target="_blank"><img src="Images/twitter.svg"></a>
+        </div>
+    </div>
   </footer>
-
-  
+</section>
 </body>
 </html>
