--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -51,22 +51,40 @@
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode."  rows="15" cols="60"></textarea>
     <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
    </div>
-    <br>
-    <div style="text-align: center;">
+    <div style="text-align: center;margin-top:20px;">
     <input type="button" id="encode-button" value= "Encode">
     <input type="button" id="decode-button" value= "Decode">
     <input type="button" id="reset-button" value= "Reset">
   </div>
   </main>
-  <hr>
-
-  <footer>
-    Contact me
-
-
-
+  <section>
+    <div class="content-info" style="text-align: justify;">
+    <h3 style="padding-top: 10px;text-align: center;">What is URL encoding/decoding?</h3>
+    <p>URL encoding stands for encoding certain characters in a URL by replacing them with one or more character 
+      triplets that consist of the percent character "%" followed by two hexadecimal digits. 
+      The two hexadecimal digits of the triplet(s) represent the numeric value of the replaced character.</p>
+     <p>RFC 3986 does not define according to which character encoding table non-ASCII characters 
+       (e.g. the umlauts ä, ö, ü) should be encoded. As URL encoding involves a pair of hexadecimal digits 
+       and as a pair of hexadecimal digits is equivalent to 8 bits, it would theoretically be possible to 
+       use one of the 8-bit code pages for non-ASCII characters (e.g. ISO-8859-1 for umlauts).</p>
+     <p>On the other hand, as many languages have their own 8-bit code page, handling all these different 8-bit 
+       code pages would be a quite cumbersome thing to do. Some languages do not even fit into an 
+       8-bit code page (e.g. Chinese). Therefore, RFC 3629 proposes to use the UTF-8 character encoding 
+       table for non-ASCII characters.</p>
+     <p>You can check out more about it 
+       <a style="color:#388bfd;" href ="https://en.wikipedia.org/wiki/Percent-encoding" target="_blank">here.</a></p>
+      </div>     
+    
+  <footer style="background-color:#24292e;">
+    <div class="footer-info" style="text-align: center;color:white;">
+      <p style="padding-top: 10px;">Check out my profiles here:</p>
+       <div class="footer-logo" >
+         <a href="https://www.linkedin.com/in/subham-mitra/" target="_blank"><img src="Images/linkedin.svg"></a>
+         <a style="margin-left: 10px;margin-right: 10px;" href="https://github.com/subham2107" target="_blank"><img src="Images/github.svg"></a>
+         <a href="https://twitter.com/subham2107" target="_blank"><img src="Images/twitter.svg"></a>
+        </div>
+    </div>
   </footer>
-
-
+</section>
 </body>
 </html>
