--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+  <div class="non-footer">
   <header class="navbar">
     <div style="font-size: 30px;">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</div>
       <div class="dropdown-nav">Encoder/Decoder <span><img class="dropdown-arrow" src="Images/down-arrow.svg"></span>
@@ -74,7 +75,10 @@
      <p>You can check out more about it 
        <a style="color:#388bfd;" href ="https://en.wikipedia.org/wiki/Percent-encoding" target="_blank">here.</a></p>
       </div>     
-    
+    </section>
+  </div>
+  
+  <div class="footer-wrapper">
   <footer style="background-color:#24292e;">
     <div class="footer-info" style="text-align: center;color:white;">
       <p style="padding-top: 10px;">Check out my profiles here:</p>
@@ -85,6 +89,7 @@
         </div>
     </div>
   </footer>
-</section>
+  </div>
+
 </body>
 </html>
