--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -10,6 +10,7 @@
   <title>Base64 Encode</title>
 </head>
 <body>
+  <div class="non-footer">
   <header class="navbar">
     <div style="font-size: 30px;">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</div>
       <div class="dropdown-nav">Encoder/Decoder <span><img class="dropdown-arrow" src="Images/down-arrow.svg"></span>
@@ -73,7 +74,9 @@
      <p>You can check out more about it 
        <a style="color:#388bfd;" href ="https://developer.mozilla.org/en-US/docs/Glossary/Base64" target="_blank">here.</a></p>
       </div>     
-    
+    </section>
+  </div>
+  <div class="footer-wrapper">
   <footer style="background-color:#24292e;">
     <div class="footer-info" style="text-align: center;color:white;">
       <p style="padding-top: 10px;">Check out my profiles here:</p>
@@ -84,7 +87,8 @@
         </div>
     </div>
   </footer>
-</section>
+</div>
+
 
 
 
