--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -12,7 +12,7 @@
 <body>
   <div class="non-footer">
   <header class="navbar">
-    <div style="font-size: 30px;">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</div>
+    <div style="font-size: 30px;"><a style="color:rgb(77, 80, 83);text-decoration: none;" href="https://my-utility-tools.netlify.app/" target="_blank">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</a></div>
       <div class="dropdown-nav">Encoder/Decoder <span><img class="dropdown-arrow" src="Images/down-arrow.svg"></span>
       <div class="dropdown-content">
         <a href="#">Base64 Encode</a>
