--- a/SHA1HashGenerator.html
+++ b/SHA1HashGenerator.html
@@ -42,18 +42,21 @@
         <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
       </div>
       <div class="other-websites">
-        <a href="#" >Unit Converters</a>
+        <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converters</a>
       </div >        
   </header>
   <main>
-    <div style="text-align: center;">
-    <h2>Use this generator to create an SHA-1 hash of a string:</h2>
+    
+    <h2 style="text-align: center;">Use this generator to create an SHA-1 hash of a string:</h2>
+    <div class="input-output">
+      <div>
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to generate a hash of."  rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
+    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60" readonly></textarea>
     </div>
-    <div style="text-align: center;margin-top:20px;">
+    <div style="margin-top:20px;">
     <input type="button" id="generate-button" value= "Generate">
     <input type="button" id="reset-button" value= "Reset">
+    </div>
     </div>
   </main>
   <section>
