--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -43,20 +43,23 @@
         <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
       </div>
       <div class="other-websites">
-        <a href="#" >Unit Converters</a>
-      </div >        
+        <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converters</a>
+      </div >       
   </header>
   <main>
-    <div style="text-align: center;">
-    <h2>URL Encode/Decode</h2>
+    
+    <h2 style="text-align: center;">URL Encode/Decode</h2>
+    <div class="input-output">
+      <div>
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode."  rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
+    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60" readonly></textarea>
    </div>
-    <div style="text-align: center;margin-top:20px;">
+    <div style="margin-top:20px;">
     <input type="button" id="encode-button" value= "Encode">
     <input type="button" id="decode-button" value= "Decode">
     <input type="button" id="reset-button" value= "Reset">
   </div>
+    </div>
   </main>
   <section>
     <div class="content-info" style="text-align: justify;">
