--- a/Base64Decode.html
+++ b/Base64Decode.html
@@ -52,7 +52,7 @@
     <div class="input-output">
     <div>
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>  
+    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60" readonly></textarea>  
   </div>
   
     
