--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -41,21 +41,25 @@
         <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
       </div>
       <div class="other-websites">
-        <a href="#" >Unit Converters</a>
-      </div >      
+        <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converters</a>
+      </div >     
   </header>
   <main>
-    <div style="text-align: center;">
-    <h2 >Base64 Encode</h2>
-    <h3>Encode a base64 string:</h3>
+    
+    <h2 style="text-align: center;">Base64 Encode</h2>
+    <h3 style="text-align: center;">Encode a base64 string:</h3>
+    <div class="input-output">
+      <div>
     <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter the text that you wish to encode or decode." rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60"></textarea>
+    <textarea type="text" id="output" placeholder="Your results will appear here." rows="15" cols="60" readonly></textarea>
     </div>
 
-    <div style="text-align: center;margin-top:20px;">
+    <div style="margin-top:20px;">
+      <div>
     <input type="button" id="encode-button" value= "Encode">
     <input type="button" id="reset-button" value= "Reset">
     </div>
+  </div>
   </main>
    
   <section>
