--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -61,15 +61,15 @@
     <h3 style="text-align: center;">Encode a base64 string:</h3>
     <div class="input-output">
       <div>
-    <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter input." rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Output." rows="15" cols="60" readonly></textarea>
-    </div>
-
-    <div style="margin-top:20px;">
-      <div>
-    <input type="button" id="encode-button" value= "Encode">
-    <input type="button" id="reset-button" value= "Reset">
-    </div>
+        <textarea  type="text" id="input" placeholder="Enter input" rows="15" cols="60"></textarea>
+        </div>
+        <div style="margin-top:20px;margin-bottom:20px;">
+          <input type="button" id="encode-button" value= "Encode">
+          <input type="button" id="reset-button" value= "Reset">
+          </div>
+        <div>
+        <textarea type="text" id="output" placeholder="Output" rows="15" cols="60" readonly></textarea>  
+      </div>
   </div>
   </main>
    
