--- a/SHA512HashGenerator.html
+++ b/SHA512HashGenerator.html
@@ -42,14 +42,15 @@
     <h2 style="text-align: center;">Use this generator to create an SHA-512 hash of a string:</h2>
     <div class="input-output">
       <div>
-    <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter input."  rows="15" cols="60"></textarea>
-    <textarea type="text" id="output" placeholder="Output." rows="15" cols="60" readonly></textarea>
-  </div>
-    
-    <div style="margin-top:20px;">
-    <input type="button" id="generate-button" value= "Generate">
-    <input type="button" id="reset-button" value= "Reset">
-  </div>
+        <textarea  type="text" id="input" placeholder="Enter input" rows="15" cols="60"></textarea>
+        </div>
+        <div style="margin-top:20px;margin-bottom:20px;">
+          <input type="button" id="generate-button" value= "Generate">
+          <input type="button" id="reset-button" value= "Reset">
+          </div>
+        <div>
+        <textarea type="text" id="output" placeholder="Output" rows="15" cols="60" readonly></textarea>  
+      </div>
 </div>
     
   </main>
