some margins added

--- a/Base64Decode.html
+++ b/Base64Decode.html
@@ -51,7 +51,7 @@
     <div>
     <textarea  type="text" id="input" placeholder="Enter input" rows="15" cols="60"></textarea>
     </div>
-    <div >
+    <div style="margin-top:20px;margin-bottom:20px;">
       <input type="button" id="decode-button" value= "Decode">
       <input type="button" id="reset-button" value= "Reset">
       </div>
