--- a/Base64Encode.html
+++ b/Base64Encode.html
@@ -63,7 +63,7 @@
       <div>
         <textarea  type="text" id="input" placeholder="Enter input" rows="15" cols="60"></textarea>
         </div>
-        <div>
+        <div style="margin-top:20px;margin-bottom:20px;">
           <input type="button" id="encode-button" value= "Encode">
           <input type="button" id="reset-button" value= "Reset">
           </div>
