--- a/SHA1HashGenerator.html
+++ b/SHA1HashGenerator.html
@@ -46,7 +46,7 @@
       <div>
         <textarea  type="text" id="input" placeholder="Enter input" rows="15" cols="60"></textarea>
         </div>
-        <div>
+        <div style="margin-top:20px;margin-bottom:20px;">
           <input type="button" id="generate-button" value= "Generate">
           <input type="button" id="reset-button" value= "Reset">
           </div>
