textarea margin fixed

--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -43,7 +43,7 @@
     <h2 style="text-align: center;">URL Encode/Decode</h2>
     <div class="input-output">
       <div>
-    <textarea style="margin-right: 15px;" type="text" id="input" placeholder="Enter input"  rows="15" cols="60"></textarea>
+    <textarea  type="text" id="input" placeholder="Enter input"  rows="15" cols="60"></textarea>
       </div>
     <div style="margin-top:20px;margin-bottom:20px;">
       <input type="button" id="encode-button" value= "Encode">
