hover effects improved

--- a/SHA1HashGenerator.html
+++ b/SHA1HashGenerator.html
@@ -14,13 +14,13 @@
   <div class="non-footer">
   <header class="navbar">
 
-    <div class="dropdown-nav"><img style="margin-top: 14px;" src ="Images/menu-24px.svg">
+    <div class="dropdown-nav"><img id="hamburger" style="margin-top: 14px;" src ="Images/menu-24px.svg">
       <div class="dropdown-content">
         <a href="https://my-color-converter.netlify.app/rgb-hex" target="_blank">Color Converter</a>
         <a href="https://my-time-stamp-converter.netlify.app/epochtohuman" target="_blank">Time Converter</a>
-        <a href="https://my-number-base-converter.netlify.app/decimaltobinary" target="_blank">Number Base Converter</a>
         <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
         <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converters</a>
+        <a href="https://my-number-base-converter.netlify.app/decimaltobinary" target="_blank">Number Base Converter</a>
       </div>
       </div>
 
@@ -36,7 +36,7 @@
       </div>
       </div>    
       
-      <div style="font-size: 30px;"><a style="color:rgb(77, 80, 83);text-decoration: none;" href="https://my-utility-tools.netlify.app/" target="_blank">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</a></div>
+      <div class="util"><a style="color:rgb(77, 80, 83);text-decoration: none;" href="https://my-utility-tools.netlify.app/" target="_blank">Utility<span style="background-color: rgb(39, 110, 241);color:white;border-radius: 50%;">@</span>pps</a></div>
      
   </header>
   <main>
@@ -48,7 +48,7 @@
         </div>
         <div style="margin-top:20px;margin-bottom:20px;">
           <input type="button" id="generate-button" value= "Generate">
-          <input type="button" id="reset-button" value= "Reset">
+          <input style="margin-left:20px;" type="button" id="reset-button" value= "Reset">
           </div>
         <div>
         <textarea type="text" id="output" placeholder="Output" rows="15" cols="60" readonly></textarea>  
