--- a/URLEncodeDecode.html
+++ b/URLEncodeDecode.html
@@ -16,11 +16,12 @@
   <header class="navbar">
       <div class="dropdown-nav"><img id="hamburger" style="margin-top: 14px;" src ="Images/menu-24px.svg">
         <div class="dropdown-content" >
-          <a href="https://my-color-converter.netlify.app/rgb-hex" target="_blank">Color Converter</a>
-          <a href="https://my-time-stamp-converter.netlify.app/epochtohuman" target="_blank">Time Converter</a>
           <a href="https://my-string-utilities.netlify.app/stringutilities" target="_blank">String Utilities</a>
-          <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converters</a>
-          <a href="https://my-number-base-converter.netlify.app/decimaltobinary" target="_blank">Number Base Converter</a>
+          <a href="https://my-unit-converter.netlify.app/temperature.html" target="_blank" >Unit Converter</a>
+        <a href="https://my-number-base-converter.netlify.app/decimaltobinary" target="_blank">Base Converter</a>
+        <a href="https://my-time-stamp-converter.netlify.app/epochtohuman" target="_blank">Time Converter</a>
+        <a href="https://my-color-converter.netlify.app/rgb-hex" target="_blank">Color Converter</a>
+        
         </div>
         </div>
       <div class="dropdown-nav">Encoder/Decoder <span><img class="dropdown-arrow" src="Images/down-arrow.svg"></span>
